--- a/SportsAnalyzer/Views/Shared/_Layout.cshtml
+++ b/SportsAnalyzer/Views/Shared/_Layout.cshtml
@@ -38,6 +38,6 @@
   @Scripts.Render("~/bundles/jquery")
   @Scripts.Render("~/bundles/bootstrap")
   @Scripts.Render("~/bundles/chartjs")
-  @RenderSection("scripts", required: false)
+  @RenderSection("Scripts", required: false)
 </body>
 </html>
