--- a/SportsAnalyzer/Views/Shared/_Layout.cshtml
+++ b/SportsAnalyzer/Views/Shared/_Layout.cshtml
@@ -8,25 +8,20 @@
   @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-  <div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-      </div>
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-          <li>@Html.ActionLink("Home", "Index", "Home")</li>
-          <li>@Html.ActionLink("About", "About", "Home")</li>
-          <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-        </ul>
-      </div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
+    @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMain" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarMain">
+      <ul class="navbar-nav">
+        <li class="nav-item"> @Html.ActionLink("Home", "Index", "Home", new { @class = "nav-link" })</li>
+        <li class="nav-item"> @Html.ActionLink("About", "About", "Home", new { @class = "nav-link" })</li>
+        <li class="nav-item"> @Html.ActionLink("Contact", "Contact", "Home", new { @class = "nav-link" })</li>
+      </ul>
     </div>
-  </div>
+  </nav>
+
   <div class="container body-content">
     @RenderBody()
     <hr />
