Introduce variable chart layout

--- a/SportsAnalyzer/Views/Football/Stats.cshtml
+++ b/SportsAnalyzer/Views/Football/Stats.cshtml
@@ -96,6 +96,8 @@
 @section Scripts
 {
   <script>
+    var paddingLeft, paddingRight, paddingTop, paddingBottom;
+
     function GetWindowWidth()
     {
       var width = window.innerWidth
@@ -115,6 +117,18 @@
     function WriteWindowSizes()
     {
       console.log("Browser inner window width: " + GetWindowWidth() + ", height: " + GetWindowHeight() + ".");
+    }
+
+    function UpdateChartLayout(chart, chartSize)
+    {
+      if (typeof chart !== "undefined")
+      {
+        console.log(chartSize);
+        console.log(chartSize.toString());
+      }
+      var windowWidth = GetWindowWidth();
+      paddingLeft = paddingRight = Math.round(0.01 * windowWidth + 7);
+      paddingTop = paddingBottom = Math.round(0.01 * windowWidth + 7);
     }
 
     function UpdateChartFontSizes(chart, chartSize)
@@ -158,6 +172,7 @@
       console.log("New Chart Size:");
       console.log(chartSize);
       WriteWindowSizes();
+      UpdateChartLayout(chart, chartSize);
       UpdateChartFontSizes(chart, chartSize);
       chart.update();
     }
@@ -184,6 +199,14 @@
         // Configuration options go here
         options: {
           responsive: true,
+          layout: {
+            padding: {
+              left: paddingLeft,
+              right: paddingRight,
+              top: paddingTop,
+              bottom: paddingBottom
+            }
+          },
           legend: {
             position: 'top',
             labels: {
@@ -253,6 +276,8 @@
 
     function OnPageLoad()
     {
+      WriteWindowSizes();
+      UpdateChartLayout();
       UpdateChartFontSizes();
       PrepareChartData();
       CreateChart();
