--- a/SportsAnalyzer/Views/Football/Stats.cshtml
+++ b/SportsAnalyzer/Views/Football/Stats.cshtml
@@ -124,6 +124,13 @@
       var windowWidth = GetWindowWidth();
       paddingLeft = paddingRight = Math.round(0.01 * windowWidth + 7);
       paddingTop = paddingBottom = Math.round(0.01 * windowWidth + 7);
+
+      chart.options.layout.padding = {
+        left: paddingLeft,
+        right: paddingRight,
+        top: paddingTop,
+        bottom: paddingBottom
+      }
     }
 
     function UpdateChartFontSizes(chart, chartSize)
