--- a/SportsAnalyzer/Views/Football/Stats.cshtml
+++ b/SportsAnalyzer/Views/Football/Stats.cshtml
@@ -97,6 +97,7 @@
 {
   <script>
     var paddingLeft, paddingRight, paddingTop, paddingBottom;
+    var varTitleFontSize, ticksFontSize, legendFontSize, tooltipsFontSize, labelsFontSize;
 
     function GetChartDisplaySize()
     {
@@ -197,8 +198,6 @@
 
     function CreateChart()
     {
-      PrepareChartData();
-
       var ctx = $("#myChart");
       //var ctx = document.getElementById('myChart').getContext('2d');
       var chart = new Chart(ctx, {
@@ -299,6 +298,7 @@
     {
       WriteWindowSizes();
 
+      PrepareChartData();
       chart = CreateChart();
 
       chartDisplaySize = GetChartDisplaySize();
