Replace function OnPageLoad by jQuery ready event

--- a/SportsAnalyzer/Views/Football/Stats.cshtml
+++ b/SportsAnalyzer/Views/Football/Stats.cshtml
@@ -325,16 +325,13 @@
       UpdateChart(window.myChart, chartDisplaySize);
     }
 
-    function OnPageLoad()
+    $(document).ready(function ()
     {
       WriteWindowSizes();
 
       CreateChart();
       GetDataset();
-    }
-
-    OnPageLoad();
-
+    });
   </script>
 }
 
